Fix Atlas aspect ratio & adjust searchbar element spacing.
Pixi was partially resizing to window, breaking scaling. (it wasn't my math being wrong!) - All scaling problems now seem to be fixed. Also some searchbar touch-ups.

--- a/css/map_style.css
+++ b/css/map_style.css
@@ -9,7 +9,7 @@
     --color-accent-1: #ea5555;
     --color-accent-2: #888888;
     --color-inverse: #333333;
-    --color-text: #404040/*#606060;*/
+    --color-text: #404040;/*#606060;*/
     --color-text-inverse: #d0d0d0;
     
     --shadow:0 0px 8px rgba(0, 0, 0, 0.15);
@@ -36,13 +36,15 @@ button.watchstone {
     width: 60px;
     height: 20px;
     pointer-events: all;
-    border-radius: 2px;
+    /* border-radius: 3px; */
 }
 button.watchstone.master {
     background-color: var(--color-accent-1);
     color: #222222;
     width: 80px;
-    height: 26px;
+    height: 30px;
+    font-weight: 600;
+    border-radius: 4px;
 }
 body {
     width: 100vw;
@@ -211,7 +213,7 @@ header > #navbar {
     box-shadow: var(--shadow);/*0 3px 4px rgba(0, 0, 0, 0.2);*/
     margin:8px;
     height:auto;
-    width:66%;
+    width: 650px;/*512px;/*66%;*/
     display:flex;
     flex-direction:row;
     justify-content:flex-start;
@@ -232,14 +234,23 @@ header > #navbar {
     outline:none;
     
     font-size:1.2em;
-    padding-top:1%;
-    padding-bottom:.75%;
+    padding-top:4px;/*1%;*/
+    padding-bottom:2px;/*.75%;*/
+
+    margin-right:8px;
+}
+.searchbar div.divider {
+    /* display: block; */
+    border-left: 1px solid green;
+    border-right: 1px solid green;
+    height: auto;
+}
+.searchbar .first {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .searchbar .dropdown {
     justify-self:flex-end;
-}
-.searchbar .element {
-    margin-right:4px;
 }
 
 .searchField {
